Fix css link in recipe files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+        <img src="images/Cooking-pana.svg" width="400px" height="auto">
         <h1>Odin Recipes</h1>
         <p>Welcome to Odin's Kitchen, the ultimate recipe website for the adventurous and the brave.</p>
         <p>Here you will find dishes inspired by the Norse mythology, such as Thor's Hammer Herring, Loki's Trickster Pie, and Freya's Golden Apples. Whether you are preparing for a feast in Valhalla or a cozy dinner at home, Odin's Kitchen has something for you.</p>
