--- a/recipes/chicken-tikka-masala-recipe.html
+++ b/recipes/chicken-tikka-masala-recipe.html
@@ -38,6 +38,6 @@
             <li>Pour crushed tomatoes into the skillet. Bring to a boil while scraping the browned bits of food off of the bottom of the skillet with a wooden spoon. Pour in coconut milk and chicken broth; bring to a simmer, reduce heat to medium-low, and cook, stirring occasionally, until flavors blend and sauce is slightly reduced, about 15 minutes.</li>
             <li>Stir chicken and any accumulated juices into sauce. Add cilantro and red pepper flakes; bring to a simmer, reduce heat to medium-low, and cook until chicken is cooked through and tender, 10 to 15 minutes. Season with salt and black pepper.</li>
         </ol>
-        <a href="../index.html">Go Back</a>
+        <a href="../index.html"><button type="button" class="button">Go Back</button></a>
     </body>
 </html>
