Add button styling

--- a/recipes/chicken-manchurian.html
+++ b/recipes/chicken-manchurian.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600&family=Source+Code+Pro&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Hot Chicken Manchurian Recipe</h1>
@@ -44,6 +44,6 @@
             <li>Mix chicken stock, soy sauce, sugar, 1/4 teaspoon black pepper, and monosodium glutamate into garlic-ginger mixture; cook and stir until sauce is heated through, about 5 minutes. Add green bell pepper to sauce and cook until slightly tender, 2 to 3 minutes.</li>
             <li>Whisk water and 2 tablespoons corn flour together in a bowl until smooth; stir into sauce until incorporated. Bring sauce to a boil. Add chicken and stir to coat.</li>
         </ol>
-        <a href="../index.html">Go Back</a>
+        <a href="../index.html"><button type="button" class="button">Go Back</button></a>
     </body>
 </html>
