--- a/recipes/saucy-garlic-noodles.html
+++ b/recipes/saucy-garlic-noodles.html
@@ -37,6 +37,6 @@
             <li>Transfer spaghetti into the sauce using tongs, bringing some of the cooking water with it. Toss until well coated; stir in Parmesan cheese. Splash in more pasta water if noodles are too dry.</li>
             <li>Plate noodles; garnish with green onions and red pepper flakes.</li>
         </ol>
-        <a href="../index.html">Go Back</a>
+        <a href="../index.html"><button type="button" class="button">Go Back</button></a>
     </body>
 </html>
