--- a/recipes/yellow-daal-tadka.html
+++ b/recipes/yellow-daal-tadka.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600&family=Source+Code+Pro&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Yellow Daal Tadka Recipe</h1>
@@ -37,6 +37,6 @@
             <li>Heat remaining ghee in a frying pan over medium heat. Add cumin seeds and cook until they sputter. Add onion, chile peppers, and ginger;stir-fry until onions are soft, 5 to 7 minutes. Remove from heat and add cilantro and cayenne. Transfer mixture to lentils.</li>
             <li>Let mixture simmer for 3 minutes. Remove from heat and stir in lemon juice.</li>
         </ol>
-        <a href="../index.html">Go Back</a>
+        <a href="../index.html"><button type="button" class="button">Go Back</button></a>
     </body>
 </html>
