--- a/recipes/chicken-tikka-masala-recipe.html
+++ b/recipes/chicken-tikka-masala-recipe.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Chicken Tikka Masala Recipe</h1>
-        <h3>by Chef John</h3>
+        <h3>by Chef Jyoti</h3>
         <img src="../images/dishes/chicken-tikka-masala.webp" alt="Chicek Tikka Masala in a bowl" width="400px">
         <p><em>Chicken Tikka Masala in a bowl</em></p>
         <p>Chicken tikka masala is usually made with heavy cream, but I like to use coconut milk instead; its subtle sweetness works beautifully with the spices in the dish. Serve with steamed rice.</p>
