--- a/recipes/chicken-manchurian.html
+++ b/recipes/chicken-manchurian.html
@@ -5,14 +5,14 @@
         <title>Chicken Manchurian Recipe</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600&family=Source+Code+Pro&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Hot Chicken Manchurian Recipe</h1>
         <h3>by Chef Vikas</h3>
         <img src="../images/dishes/chicken-manchurian.webp" alt="Chicek Manchurian in a bowl" width="400px">
-        <p><em>Chicken Manchurian with Rice in a Bowl</em></p>
+        <p class="image-caption"><em>Chicken Manchurian with Rice in a Bowl</em></p>
         <p>A simple and savory dish with an element of freshness delivered by the fragrant and flavorful cilantro. Serve immediately over white rice.</p>
         <h2>Ingredients:</h2>
         <ul>
