--- a/recipes/chicken-tikka-masala-recipe.html
+++ b/recipes/chicken-tikka-masala-recipe.html
@@ -5,14 +5,14 @@
         <title>Chicken Tikka Masala Recipe</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600&family=Source+Code+Pro&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Chicken Tikka Masala Recipe</h1>
         <h3>by Chef Jyoti</h3>
         <img src="../images/dishes/chicken-tikka-masala.webp" alt="Chicek Tikka Masala in a bowl" width="400px">
-        <p><em>Chicken Tikka Masala in a bowl</em></p>
+        <p class="image-caption"><em>Chicken Tikka Masala in a bowl</em></p>
         <p>Chicken tikka masala is usually made with heavy cream, but I like to use coconut milk instead; its subtle sweetness works beautifully with the spices in the dish. Serve with steamed rice.</p>
         <h2>Ingredients:</h2>
         <ul>
