--- a/recipes/saucy-garlic-noodles.html
+++ b/recipes/saucy-garlic-noodles.html
@@ -5,14 +5,14 @@
         <title>Saucy Garlic Noodles Recipe</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600&family=Source+Code+Pro&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Saucy Garlic Noodles Recipe</h1>
         <h3>by Chef Soni</h3>
         <img src="../images/dishes/garlic-noodles.webp" alt="Saucy Garlic Noodles" width="400px">
-        <p><em>Garlic Noodles in a bowl</em></p>
+        <p class="image-caption"><em>Garlic Noodles in a bowl</em></p>
         <p>These garlic noodles are deceivingly simple, yet devastatingly delicious. Garlic noodles were invented back in the '70s at a restaurant in SanFrancisco called Thanh Long. Usually served with roasted Dungeness crab, the recipe is a very closely guarded family secret, but after lots of investigation, and even more experimentation, I think this is very close.</p>
         <h2>Ingredients:</h2>
         <ul>
