--- a/recipes/yellow-daal-tadka.html
+++ b/recipes/yellow-daal-tadka.html
@@ -5,14 +5,14 @@
         <title>Yellow Daal Tadka Recipe</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,400;1,500;1,600&family=Source+Code+Pro&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Yellow Daal Tadka Recipe</h1>
         <h3>by Chef Shelly</h3>
         <img src="../images/dishes/dal-tadka.webp" alt="Yellow Daal Tadka in a bowl" width="400px">
-        <p><em>Yellow Daal Tadka in a Bowl</em></p>
+        <p class="image-caption"><em>Yellow Daal Tadka in a Bowl</em></p>
         <p>This is an easy and rewarding recipe for a spicy and flavorful Indian dish of lentil stew! Serve on its own or with basmati rice.</p>
         <h2>Ingredients:</h2>
         <ul>
