Change font weight for headings Update the font weight for headings to 600.

--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
             <li><a href="recipes/saucy-garlic-noodles.html">Saucy Garlic Noodles</a></li>
             <li><a href="recipes/yellow-daal-tadka.html">Yellow Daal Tadka</a></li>
         </ul>
+        <h1>Sample</h1>
+        <h2>Sample</h2>
+        <h3>Sample</h3>
+        <h4>Sample</h4>
+        <h5>Sample</h5>
+        <h6>Sample</h6>
     </body>
 </html>
