--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Welcome to Odin's Kitchen, the ultimate recipe website for the adventurous and the brave.</p>
         <p>Here you will find dishes inspired by the Norse mythology, such as Thor's Hammer Herring, Loki's Trickster Pie, and Freya's Golden Apples. Whether you are preparing for a feast in Valhalla or a cozy dinner at home, Odin's Kitchen has something for you.</p>
         <p>Are you ready to join?</p>
-        <h2>Recipes:</h2>
+        <h2>Odin's Recipes:</h2>
         <ul>
             <li><a href="recipes/chicken-manchurian.html">Chicken Manchurian</a></li>
             <li><a href="recipes/chicken-tikka-masala-recipe.html">Chicken Tikka Masala</a></li>
