Fix image captions and remove <em> tag from captions

--- a/recipes/saucy-garlic-noodles.html
+++ b/recipes/saucy-garlic-noodles.html
@@ -12,7 +12,7 @@
         <h1>Saucy Garlic Noodles Recipe</h1>
         <h3>by Chef Soni</h3>
         <img src="../images/dishes/garlic-noodles.webp" alt="Saucy Garlic Noodles" width="400px">
-        <p class="image-caption"><em>Garlic Noodles in a bowl</em></p>
+        <p class="image-caption">Garlic Noodles in a bowl</p>
         <p>These garlic noodles are deceivingly simple, yet devastatingly delicious. Garlic noodles were invented back in the '70s at a restaurant in SanFrancisco called Thanh Long. Usually served with roasted Dungeness crab, the recipe is a very closely guarded family secret, but after lots of investigation, and even more experimentation, I think this is very close.</p>
         <h2>Ingredients:</h2>
         <ul>
