--- a/recipes/yellow-daal-tadka.html
+++ b/recipes/yellow-daal-tadka.html
@@ -12,7 +12,7 @@
         <h1>Yellow Daal Tadka Recipe</h1>
         <h3>by Chef Shelly</h3>
         <img src="../images/dishes/dal-tadka.webp" alt="Yellow Daal Tadka in a bowl" width="400px">
-        <p class="image-caption"><em>Yellow Daal Tadka in a Bowl</em></p>
+        <p class="image-caption">Yellow Daal Tadka in a Bowl</p>
         <p>This is an easy and rewarding recipe for a spicy and flavorful Indian dish of lentil stew! Serve on its own or with basmati rice.</p>
         <h2>Ingredients:</h2>
         <ul>
