--- a/recipes/chicken-manchurian.html
+++ b/recipes/chicken-manchurian.html
@@ -12,7 +12,7 @@
         <h1>Hot Chicken Manchurian Recipe</h1>
         <h3>by Chef Vikas</h3>
         <img src="../images/dishes/chicken-manchurian.webp" alt="Chicek Manchurian in a bowl" width="400px">
-        <p class="image-caption"><em>Chicken Manchurian with Rice in a Bowl</em></p>
+        <p class="image-caption">Chicken Manchurian with Rice in a Bowl</p>
         <p>A simple and savory dish with an element of freshness delivered by the fragrant and flavorful cilantro. Serve immediately over white rice.</p>
         <h2>Ingredients:</h2>
         <ul>
