--- a/recipes/chicken-tikka-masala-recipe.html
+++ b/recipes/chicken-tikka-masala-recipe.html
@@ -12,7 +12,7 @@
         <h1>Chicken Tikka Masala Recipe</h1>
         <h3>by Chef Jyoti</h3>
         <img src="../images/dishes/chicken-tikka-masala.webp" alt="Chicek Tikka Masala in a bowl" width="400px">
-        <p class="image-caption"><em>Chicken Tikka Masala in a bowl</em></p>
+        <p class="image-caption">Chicken Tikka Masala in a bowl</p>
         <p>Chicken tikka masala is usually made with heavy cream, but I like to use coconut milk instead; its subtle sweetness works beautifully with the spices in the dish. Serve with steamed rice.</p>
         <h2>Ingredients:</h2>
         <ul>
