Change titles on homepage

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     </head>
     <body>
         <img src="images/Cooking-pana.svg" width="400px" height="auto">
-        <h1>Odin Recipes</h1>
+        <h1>Odin's Recipes</h1>
         <p>Welcome to Odin's Kitchen, the ultimate recipe website for the adventurous and the brave.</p>
         <p>Here you will find dishes inspired by the Norse mythology, such as Thor's Hammer Herring, Loki's Trickster Pie, and Freya's Golden Apples. Whether you are preparing for a feast in Valhalla or a cozy dinner at home, Odin's Kitchen has something for you.</p>
         <p>Are you ready to join?</p>
-        <h2>Odin's Recipes:</h2>
+        <h2>The Recipes:</h2>
         <ul>
             <li><a href="recipes/chicken-manchurian.html">Chicken Manchurian</a></li>
             <li><a href="recipes/chicken-tikka-masala-recipe.html">Chicken Tikka Masala</a></li>
